client/src/App.css
/* Font imports */
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Poppins&display=swap');

body {
  background-color: #FFF9E4;
}

/* styles.css */
  /* Create a custom scrollbar for Webkit browsers */
  /* Adjust styles according to your design */
  ::-webkit-scrollbar {
    width: 8px;
  }
  
  ::-webkit-scrollbar-thumb {
    background-color: #D2C2A4;
    border-radius: 8px;
  }
  
  ::-webkit-scrollbar-track {
    background-color: #FFF9E4;
  }
  



/* Text drop shadow */

.nav-text-shadow {
    text-shadow: 2px 2px 2px rgba(9, 14, 58, 0.30);
}


/* Placeholder text color */

.custom-placeholder::placeholder{
  color: #A59F8B; 
  /* (graphite) */
}

.custom-input {
  width: 100%;
  background: #FFF9E4;
  /* (notebook paper) */
  border-radius: 1rem;
  border: 1rem;
  font-family: karla;
  padding: 0.5rem;
  font-size: 1.75rem;
}

/* Save Button */
.save-button {
  background-image: url("./images/button.png");
  width: 700px;
  height: 80px;
  font-family: karla;
  font-size: 1.75rem;
  color: #FFF9E4;
}


@media (max-width: 600px) {
  /* Transparent background for specific scrollbars */
  .scrollbar-bg-transparent::-webkit-scrollbar,
  .scrollbar-bg-transparent::-webkit-scrollbar-track {
    background-color: transparent !important; /* Transparent background for scrollbar and track */
  }

  .scrollbar-bg-transparent::-webkit-scrollbar-thumb {
    background-color: #D2C2A4; /* Adjust thumb color if needed */
    border-radius: 8px; /* Keep border radius consistent */
  }

  /* Ensure transparency for all scrollbar parts */
  .scrollbar-bg-transparent::-webkit-scrollbar-corner {
    background-color: transparent !important; /* Ensure corner is transparent */
  }
}

